# sepomex-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  sepomex.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  sepomex_sdk.py  sepomex_types.py
py/core/: context.py  error.py  result.py  utility_type.py
py/entity/: city_entity.py  municipality_entity.py  state_entity.py  zip_code_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  paging_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_city_direct.py  test_city_entity.py  test_exists.py  test_feature.py  test_municipality_direct.py  test_municipality_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_state_direct.py  test_state_entity.py  test_zip_code_direct.py  test_zip_code_entity.py
py/utility/: done.py  fetcher.py  make_error.py  make_fetch_def.py  make_response.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  register.py  transform_request.py
(+477 files in other folders)
